<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.registration.SignInFragment"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password" />


    <EditText
        android:id="@+id/passId"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
<LinearLayout
    android:id="@+id/btnHide"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"/>
</LinearLayout>